# htir

./: .gitignore  Cargo.toml  build.rs  htir_app_icon.pov  meili_app_icon.pov  meili_mfcd.ditaa  readme.md
.cargo/: config
btool/: __init__.py  __main__.py  build_common_post_exe.py  build_common_pre_exe.py  build_linux.py  build_macos.py  build_windows.py  coverage.py  gen_mfcd.py  icon_gen.py  release.py  testcmd.py  utils.py
examples/: import_test.py
htir_py/: Cargo.toml
htir_py/src/: lib.rs
src/: client.rs  config.rs  error.rs  lib.rs  server.rs  tests.rs  util.rs  wire.rs
src/gui/: gui_macos.rs  gui_unix_gtk.rs  gui_win32.rs  mod.rs
tests/: nonlib_client.py
