[package]
name = "htir"
authors = [
  "Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"
]
version = "0.1.0"
edition = "2021"

[lib]
name = "htir"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
sqlite = "0.26"

dirs = "4.0"
clap = { version = "3.1", features = ["derive"] }



[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"]}
winsafe = { version = "0.0.9", features = ["comctl", "comdlg", "gui", "kernel", "msimg", "shell", "shlwapi", "user", "uxtheme"] }


[target.'cfg(target_os = "macos")'.dependencies]
cacao = { version = "0.2" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
gtk4 = { version = "0.4" }
glib = { version = "0.15" }

