[package]
name = "meili"
authors = [
  "Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"
]
version = "0.1.1"
edition = "2021"
build = "build.rs"

[features]
default = []
force_gtk_ui = ["gtk4", "glib"]

[lib]
name = "meili"
path = "src/lib.rs"

[[bin]]
name = "meili-server"
path = "src/server.rs"

[[bin]]
name = "meili-client"
path = "src/client.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
sqlite = "0.26"

dirs = "4.0"
clap = { version = "3.1", features = ["derive"] }


futures-util = { version = "0.3" } #, default-features = false, features = ["sink", "std"] }
tokio-tungstenite = "*"
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "0.2"

serde = { version = "1", features = ["derive"] }
serde_bare = "0.5.0"
serde_bytes = "0.11"

toml = "0.5"

ciborium = "0.2.0"

regex = "1"



gtk4 = { version = "0.4", optional = true }
glib = { version = "0.15", optional = true }

[target.'cfg(all(target_os = "windows"))'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"] }
winsafe = { version = "0.0.9", features = ["gui"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(all(target_os = "macos"))'.dependencies]
cacao = { version = "0.2" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
gtk4 = { version = "0.4" }
glib = { version = "0.15" }

